data/manifests/artifacthub/bitnami/rabbitmq/010_statefulset_release-name-rabbitmq.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: release-name-rabbitmq
  namespace: default
  labels:
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: rabbitmq
    app.kubernetes.io/version: 4.1.3
    helm.sh/chart: rabbitmq-16.0.14
spec:
  serviceName: release-name-rabbitmq-headless
  podManagementPolicy: OrderedReady
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/name: rabbitmq
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: rabbitmq
        app.kubernetes.io/version: 4.1.3
        helm.sh/chart: rabbitmq-16.0.14
      annotations:
        checksum/config: 81f24711d28981f706e1ae5b2e3ae075d7014b462120496ce6f50d5053194f5e
        checksum/secret: 0db9412a28617166460cac5333a5cf8ebbc34cfe87087e0f09b593395c5fa678
    spec:
      serviceAccountName: release-name-rabbitmq
      affinity:
        podAffinity: null
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchLabels:
                  app.kubernetes.io/instance: release-name
                  app.kubernetes.io/name: rabbitmq
              topologyKey: kubernetes.io/hostname
            weight: 1
        nodeAffinity: null
      automountServiceAccountToken: true
      securityContext:
        fsGroup: 1001
        fsGroupChangePolicy: Always
        supplementalGroups: []
        sysctls: []
      terminationGracePeriodSeconds: 120
      enableServiceLinks: true
      containers:
      - name: rabbitmq
        image: docker.io/bitnami/rabbitmq:4.1.3-debian-12-r1
        imagePullPolicy: IfNotPresent
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          runAsGroup: 1001
          runAsNonRoot: true
          runAsUser: 1001
          seLinuxOptions: {}
          seccompProfile:
            type: RuntimeDefault
        lifecycle:
          preStop:
            exec:
              command:
              - /bin/bash
              - -ec
              - "if [[ -f /opt/bitnami/scripts/rabbitmq/nodeshutdown.sh ]]; then\n\
                \    /opt/bitnami/scripts/rabbitmq/nodeshutdown.sh -t \"120\" -d \"\
                false\"\nelse\n    rabbitmqctl stop_app\nfi\n"
        envFrom: null
        ports:
        - name: amqp
          containerPort: 5672
        - name: dist
          containerPort: 25672
        - name: stats
          containerPort: 15672
        - name: epmd
          containerPort: 4369
        - name: metrics
          containerPort: 9419
        livenessProbe:
          failureThreshold: 6
          initialDelaySeconds: 120
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 20
          exec:
            command:
            - /bin/bash
            - -ec
            - curl -f --user user:$(< $RABBITMQ_PASSWORD_FILE) 127.0.0.1:15672/api/health/checks/virtual-hosts
        readinessProbe:
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 20
          exec:
            command:
            - /bin/bash
            - -ec
            - curl -f --user user:$(< $RABBITMQ_PASSWORD_FILE) 127.0.0.1:15672/api/health/checks/local-alarms
        resources:
          limits:
            cpu: 375m
            ephemeral-storage: 2Gi
            memory: 384Mi
          requests:
            cpu: 250m
            ephemeral-storage: 50Mi
            memory: 256Mi
        volumeMounts:
        - name: configuration
          mountPath: /bitnami/rabbitmq/conf
        - name: empty-dir
          mountPath: /tmp
          subPath: tmp-dir
        - name: empty-dir
          mountPath: /opt/bitnami/rabbitmq/etc/rabbitmq
          subPath: app-conf-dir
        - name: empty-dir
          mountPath: /opt/bitnami/rabbitmq/var/lib/rabbitmq
          subPath: app-tmp-dir
        - name: empty-dir
          mountPath: /opt/bitnami/rabbitmq/.rabbitmq/
          subPath: app-erlang-cookie
        - name: empty-dir
          mountPath: /opt/bitnami/rabbitmq/var/log/rabbitmq
          subPath: app-logs-dir
        - name: empty-dir
          mountPath: /opt/bitnami/rabbitmq/plugins
          subPath: app-plugins-dir
        - name: data
          mountPath: /opt/bitnami/rabbitmq/.rabbitmq/mnesia
        - name: rabbitmq-secrets
          mountPath: /opt/bitnami/rabbitmq/secrets
      volumes:
      - name: empty-dir
        emptyDir: {}
      - name: configuration
        projected:
          sources:
          - secret:
              name: release-name-rabbitmq-config
      - name: rabbitmq-secrets
        projected:
          sources:
          - secret:
              name: release-name-rabbitmq
          - secret:
              name: release-name-rabbitmq
  volumeClaimTemplates:
  - apiVersion: v1
    kind: PersistentVolumeClaim
    metadata:
      name: data
      labels:
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/name: rabbitmq
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 8Gi
